# Eagle-Selfbot

./: README.md  config.json  main.py  nuke.json  pyproject.toml  readme.txt
cogs/: crypto.py  info.py  lock.py  rate.py  status.py  stillthesamebro.py  whyulurking.py
